# Project-Euler

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  todo.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: black.yml  ci.yml  ci_test.yml  lint.yml  pytest.yml  test.yml
docs/: conf.py  index.rst
docs/api/: pe.misc.rst  pe.sequences.rst
docs/problems/: index.rst
pe/: euler.py  integer.py  misc.py  more_itertools.py  sequences.py  solutions.txt
pe/euler_problems/: euler_003.py  euler_004.py  euler_005.py  euler_008.py  euler_011.py  euler_013.py  euler_014.py  euler_015.py  euler_016.py  euler_017.py  euler_018.py  euler_019.py  euler_021.py  euler_027.py  euler_031.py  euler_034.py  euler_035.py  euler_037.py  euler_042.py  euler_045.py  euler_047.py  euler_048.py  euler_049.py  euler_050.py  euler_052.py  euler_054.py  euler_055.py  euler_060.py  euler_063.py  euler_070.py  euler_092.py
pe/problems/: p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p021.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py  p028.py  p029.py  p030.py  p031.py  p032.py  p033.py  p034.py  p035.py  p036.py  p037.py  p038.py  p039.py  p040.py  (+35 more)
pe/scripts/: euler
project_euler/: euler.py  integer.py  misc.py  more_itertools.py  predicates.py  primes.py  sequences.py  solutions.txt  test_euler.py
project_euler/euler_001/: euler_001.py
project_euler/euler_002/: euler_002.py
project_euler/euler_003/: euler_003.py
project_euler/euler_004/: euler_004.py
project_euler/euler_005/: euler_005.py
project_euler/euler_006/: euler_006.py
project_euler/euler_007/: euler_007.py
project_euler/euler_008/: euler_008.py
project_euler/euler_009/: euler_009.py
project_euler/euler_010/: euler_010.py
project_euler/euler_011/: euler_011.py
project_euler/euler_problems/: euler_001.py  euler_002.py  euler_003.py  euler_004.py  euler_005.py  euler_006.py  euler_007.py  euler_008.py  euler_009.py  euler_010.py  euler_011.py  euler_012.py  euler_013.py  euler_014.py  euler_015.py  euler_016.py  euler_017.py  euler_018.py  euler_019.py  euler_020.py  euler_021.py  euler_022.py  euler_023.py  euler_024.py  euler_025.py  euler_026.py  euler_027.py  euler_028.py  euler_029.py  euler_030.py  euler_031.py  euler_032.py  euler_033.py  euler_034.py  euler_035.py  euler_036.py  euler_037.py  euler_038.py  euler_039.py  euler_040.py  (+39 more)
project_euler/scripts/: euler  euler.py
tests/: test_euler_solutions.py  test_integer.py  test_sequences.py
(+178 files in other folders)
