[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_euler"
version = "6.28318"
authors = [
    { name="Taben Malik", email="tabenjmalik@gmail.com" },
]
description = "Solutions to ProjectEuler problems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-timeout"
]

[project.scripts]
euler="pe.scripts.euler:main"

[project.entry-points."pe.problems"]
public_problems = "pe.problems"
